Refactored a bit. Store settings / radiosettings.
