# TrboPortal/TrboPortal/Controllers/TrboPortalControllerImplementation.cs
@@ -3,6 +3,7 @@ using System.Collections.Generic;
 using System.Linq;
 using System.Threading.Tasks;
 using TrboPortal.Mappers;
+using TrboPortal.Model;
 using TrboPortal.TrboNet;
 
 namespace TrboPortal.Controllers
@@ -14,9 +15,9 @@ namespace TrboPortal.Controllers
             return Task.FromResult<ICollection<Radio>>(TurboController.Instance.GetSettings());
         }
 
-        public Task UpdateRadioSettingsAsync(IEnumerable<Radio> devices)
+        public Task UpdateRadioSettingsAsync(IEnumerable<RadioSettings> radioSettings)
         {
-            return Task.Run(() => devices?.ToList().ForEach(d => { TurboController.Instance.AddOrUpdateDeviceSettings(d); }));
+            return Task.Run(() => TrboPortalHelper.UpdateRadioSettings(radioSettings));
         }
 
         public Task<ICollection<GpsMeasurement>> GetGpsHistoryAsync(IEnumerable<int> id, string from, string through)
@@ -24,9 +25,9 @@ namespace TrboPortal.Controllers
             var f = DateTimeMapper.ToDateTime(from);
             var t = DateTimeMapper.ToDateTime(through);
 
-            //TODO What to do if from/through wasn't convertible to DateTime? Log, Return error code or continue?
             return Task.FromResult(TrboPortalHelper.GetGpsMeasurements(id, f, t));
         }
+
 
         public Task<ICollection<string>> GetLoggingAsync(string loglevel, string from, string through)
         {
@@ -42,25 +43,25 @@ namespace TrboPortal.Controllers
             );
         }
 
+        public Task<ICollection<SystemSettings>> GetSystemSettingsAsync()
+        {
+            throw new NotImplementedException();
+        }
+
+        public Task SetSystemSettingsAsync(SystemSettings body)
+        {
+            return Task.Run(() => TrboPortalHelper.UpdateSystemSettings(body));
+        }
+
         public Task<ICollection<GpsMeasurement>> GetMostRecentGpsAsync(IEnumerable<int> id)
         {
             return Task.FromResult(TrboPortalHelper.GetGpsMeasurements(id, null, null));
-        }
-
-        public Task<ICollection<SystemSettings>> GetSystemSettingsAsync(SystemSettings body)
-        {
-            throw new NotImplementedException();
         }
 
         public Task RequestGpsUpdateAsync(IEnumerable<int> id)
         {
             // TODO never null ?
             return Task.Run(() => TurboController.Instance.PollForGps(id.ToArray()));
-        }
-
-        public Task<ICollection<SystemSettings>> SetSystemSettingsAsync()
-        {
-            throw new NotImplementedException();
         }
 
         public Task UpdateGpsModeAsync(IEnumerable<int> id, GpsMode body)
